--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+/bin
+/obj
 # File created using '.gitignore Generator' for Visual Studio Code: https://bit.ly/vscode-gig
 # Created by https://www.toptal.com/developers/gitignore/api/windows,visualstudiocode,aspnetcore,csharp,dotnetcore,visualstudio
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,visualstudiocode,aspnetcore,csharp,dotnetcore,visualstudio
