--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,30 @@
       // "program": "${workspaceFolder}/College-API/bin/Debug/net7.0/College-API.dll",
       "program": "${workspaceFolder}/Clients/MvcApp/bin/Debug/net7.0/MvcApp.dll",
       "args": [],
+      "cwd": "${workspaceFolder}/Clients/MvcApp",
+      "stopAtEntry": false,
+      // Enable launching a web browser when ASP.NET Core starts. For more information: https://aka.ms/VSCode-CS-LaunchJson-WebBrowser
+      "serverReadyAction": {
+        "action": "openExternally",
+        "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
+      },
+      "env": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_URLS": "https://localhost:5000"
+      },
+      "sourceFileMap": {
+        "/Views": "${workspaceFolder}/Views"
+      }
+    },
+    {
+      "name": ".NET Core Launch (api)",
+      "type": "coreclr",
+      "request": "launch",
+      "preLaunchTask": "build",
+      // If you have changed target frameworks, make sure to update the program path.
+      "program": "${workspaceFolder}/College-API/bin/Debug/net7.0/College-API.dll",
+      //   "program": "${workspaceFolder}/Clients/MvcApp/bin/Debug/net7.0/MvcApp.dll",
+      "args": [],
       "cwd": "${workspaceFolder}/College-API",
       "stopAtEntry": false,
       // Enable launching a web browser when ASP.NET Core starts. For more information: https://aka.ms/VSCode-CS-LaunchJson-WebBrowser
@@ -21,7 +45,9 @@
         "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
       },
       "env": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        // "ASPNETCORE_URLS": "https://localhost:5001",
+        "ASPNETCORE_URLS": "https://localhost:5223" //make sure to not run debug and the program simultaneously.
       },
       "sourceFileMap": {
         "/Views": "${workspaceFolder}/Views"
