--- a/Clients/MvcApp/appsettings.Development.json
+++ b/Clients/MvcApp/appsettings.Development.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "baseUrl": "http://localhost:5223/api/v3"
+  "baseUrl": "http://localhost:5223/api/v3",
+  "baseUrlDebug": "http://localhost:5001/api/v3"
 }
