--- a/Clients/MvcApp/appsettings.Development.json
+++ b/Clients/MvcApp/appsettings.Development.json
@@ -6,5 +6,5 @@
     }
   },
   "baseUrl": "http://localhost:5223/api/v3",
-  "baseUrlDebug": "http://localhost:5001/api/v3"
+  "baseUrlDebugthatWedontneed": "http://localhost:5001/api/v3"
 }
